# ovhmanager

./: 00_core.html  00_core.md  01_project.html  01_project.md  02_catalog.html  02_catalog.md  03_instance.html  03_instance.md  README.md  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
nbs/: 00_core.ipynb  01_manager.ipynb  01_project.ipynb  02_catalog.ipynb  03_instance.ipynb  index.ipynb  nbdev.yml  sidebar.yml
ovhmanager/: _modidx.py  catalog.py  core.py  instance.py  project.py
